2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix error during initialization of *TERMINAL-IO* on Mac OS X.
	* stream.d (handle_type): Ignore EBADF error on Mac OS X.
	(regular_or_pipe_handle_p): Renamed from pipe_file_handle_p.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix use of libtool's archive_cmds on Mac OS X.
	* makemake.in (DSYMUTIL): New variable.
	(archive_cmds): Don't lose references to $allow_undefined_flag.
	(XCC_CREATESHARED): Remove second command if present.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Avoid problem with shared libraries on Mac OS X.
	* makemake.in (SHREXT): Define to '.dylib' on Mac OS X and to '.sl' on
	HP-UX.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on NetBSD/sparc.
	* Makefile.devel (multibuild-netbsd-sparc): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For NetBSD/sparc, enable all optimizations
	except ASM.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on DragonFly/i386.
	None of the builds actually works for me: the kernel panics too often.
	* Makefile.devel (multibuild-dragonfly-i386): Enable all build variants
	that should work.
	* makemake.in (XCFLAGS): For DragonFly/i386, enable all optimizations
	except ASM.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on FreeBSD/arm64.
	* Makefile.devel (multibuild-freebsd-arm64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For FreeBSD/arm64, enable all optimizations
	except ASM.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix build failure on FreeBSD/arm64 and Solaris/SPARC64 with non-GCC
	compiler and NO_ADDRESS_SPACE_ASSUMPTIONS.
	* lispbibl.d: On FreeBSD/arm64 with clang and on Solaris/SPARC64 with
	cc, prefer GENERIC64B_HEAPCODES over GENERIC64C_HEAPCODES.
	(GENERIC64B_HEAPCODES_WORKS): Define accordingly.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Update set of working builds for Linux/s390x.